export interface Category {
  id: number;
  name: string;
  organisationId: number;
}
