@startuml
left to right direction

class Category {
}

class Token {
}

class Course {
}

class Appointment {
}

class User {
}

Appointment "*"--"1" Course: > belongs to
Course "*"--"1" Category: > belongs to
User "1"--"*" Token: > Customer
Token "*"--"1" Category: > belongs to
Token "*"--"0..1" Appointment
Organisation "1"--"*" Category: > offers
User "*"--"1" Organisation: > Organisator
User -- Appointment: > Instructor
User "1"--"*" Hire: > Instructor
Hire "*"--"1" Organisation
AppointmentManagement .. (User, Appointment)

@enduml
